<resources>
    <!-- Normal strings -->
    <string name="app_name">Keycaps</string>
    <string name="actKeyboardDetailsTxtBrand">Brand</string>
    <string name="actKeyboardDetailsTxtModel">Model</string>
    <string name="actKeyboardDetailsTxtSwitch">Switch(es)</string>
    <string name="actKeyboardDetailsBtnAdd">Add</string>
    <string name="actKeyboardDetailsBtnReset">Reset</string>

    <!-- Success Strings -->
    <string name="insertKeyboardSuccess">Keyboard added!</string>

    <!-- Errors strings -->
    <string name="insertKeyboardFillAllFIeldsError">Please, inform all the fields.</string>
    <string name="actMainNoKeyboardsYet">You don\'t have any keyboards yet.</string>
    <string name="actMainAccessibilityFabAddKeyboard">Add Keyboard</string>
    <string name="actMainAccessibilityKeyboardList">Keyboard List</string>
    <string name="actKeyboardDetailsAccessibilityAdicionandoTeclado">Adding a Keyboard</string>
    <string name="actKeyboardDetailsAccessibilityBack">Go Back</string>

</resources>
